# audio_transport

./: CLAUDE.md  CMakeLists.txt  QUICKSTART_REALTIME.md  README_REALTIME.md  REALTIME_IMPLEMENTATION.md  REALTIME_VST3_GUIDE.md  VST3_PLUGIN_SUMMARY.md  audio_transport.py  k_params.json  params.json  rebuild.sh  test_bug.sh
example/: realtime_transport.cpp  transport.cpp
include/audio_transport/: RealtimeAudioTransport.hpp  RealtimeReassignmentTransport.hpp
src/: RealtimeAudioTransport.cpp  RealtimeReassignmentTransport.cpp  audio_transport.cpp  spectral.cpp
test/: test_edge_cases.cpp  test_realtime_transport.cpp  test_silence_transition.cpp
vst_plugin/: GETTING_STARTED.md  POST_BUILD_NOTES.md  QUICK_REFERENCE.md  README.md  VERSION.md  build.sh
vst_plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
